# fesghel

./: .drone.yml  Cargo.toml  Dockerfile  README.md  api.http  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yaml
config/: default.toml
k6/: script.js
src/: main.rs  metrics.rs
src/database/: mod.rs
src/handler/: healthz.rs  mod.rs  url.rs
src/model/: mod.rs  url.rs
src/request/: mod.rs
src/setting/: mod.rs
src/store/: error.rs  mod.rs  url.rs
