[package]
name = "fesghel"
version = "0.1.0"
authors = ["Parham Alvani <parham.alvani@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
mongodb = "3"
serde = "1.0.217"
config = { version = "0.15.14", features = ["toml"] }
chrono = { version = "0.4.41", features = ["serde"] }
rand = "0.9.0"
bson = "2"
log = "0.4.28"
simple_logger = "5.0.0"
