[package]
name = "fesghel"
version = "0.1.0"
authors = ["Parham Alvani <parham.alvani@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
mongodb = "3"
serde = "1"
config = { version = "0.15", features = ["toml"] }
rand = "0.10"
log = "0.4"
simple_logger = "5"
url = "2"
# Prometheus metrics
actix-web-prom = "0.10"
prometheus = "0.14"

# Dev dependencies are only compiled for tests and examples.
[dev-dependencies]
serde_json = "1"
